--- a/memberpage.html
+++ b/memberpage.html
@@ -219,7 +219,7 @@
 
     <!-- Product -->
     <div class="shadow-sm">
-        <div class="container my-5">
+        <div class="container">
             <h1 class="text-center font-weight-bold text-black mt-5" id="product">Product</h1>
             <hr class="mt-2 mb-5">
             <div class="row text-center">
@@ -296,7 +296,7 @@
                     </div>
 
                     <!-- Flavoured Latte -->
-                    <h2 class="mt-4">Flavoured Latte</h2>
+                    <h2>Flavoured Latte</h2>
                     <div class="row text-center">
                         <div class="col-lg-2 col-md-2 col-10">
                             <div class="margin-b-20">
@@ -372,7 +372,7 @@
                         </div>
 
                         <!-- Non Coffee -->
-                        <h2 class="mt-4">Non Coffee</h2>
+                        <h2>Non Coffee</h2>
                         <div class="row text-center">
                             <div class="col-lg-2 col-md-2 col-10">
                                 <div class="margin-b-20">
