--- a/register.html
+++ b/register.html
@@ -48,19 +48,19 @@
             <div class="col-sm-6 login-section-wrapper">
                 <div class="login-wrapper my-auto">
                     <h1 class="login-title mt-5">Register</h1>
-                    <form action="#!">
+                    <form action="/Logic/signup.php" method="POST">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" name="name" id="name" class="form-control" placeholder="your name">
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" class="form-control"
+                            <input type="text" name="email" id="email" class="form-control"
                                 placeholder="email@example.com">
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone number</label>
-                            <input type="tel" id="phone" name="phone" class="form-control" 
+                            <input type="text" id="phone" name="phone" class="form-control" 
                             placeholder="your phone number">
                         </div>
                         <div class="form-group mb-4">
@@ -73,7 +73,7 @@
                             <input type="password" name="confirmpassword" id="confirmpassword" class="form-control"
                                 placeholder="confrim your passsword">
                         </div>
-                        <input name="register" id="register" class="btn btn-block login-btn" type="button" value="Register">
+                        <input name="register" id="register" class="btn btn-block login-btn" type="submit" value="Register">
                     </form>
                 </div>
             </div>
