--- a/promo.html
+++ b/promo.html
@@ -59,22 +59,30 @@
         </div>
     </nav>
 
-    <div id="top" class="jumbotron text-center" style="margin-top: 5rem;">
+    <div id="top" class="jumbotron jumbotron-fluid jumbo-promo text-center">
         <h1 class="font-weight-bold">PROMOS</h1>
     </div>
 
     <div class="container mb-5">
         <div class="accordion" id="accordionExample">
             <div class="card">
-                <div class="card-header" type="button" id="headingOne" data-toggle="collapse"
-                    data-target="#collapse1" aria-expanded="false" aria-controls="collapseOne">
-                    PROMO 3
+                <div class="card-header text-center" type="button" id="headingOne" data-toggle="collapse"
+                    data-target="#collapse1" aria-expanded="false" aria-controls="collapseOne"
+                    style="background-color: black; color: white;">
+                    <h3>Promo 1</h3>
                 </div>
 
                 <div id="collapse1" class="collapse" aria-labelledby="headingOne"
                     data-parent="#accordionExample">
-                    <div class="card-body">
-                        WAAAAAAAAAAAAAAAAW
+                    <div class="card-body text-center">
+                        <div class="row">
+                            <div class="col-6">
+                                S&K
+                            </div>
+                            <div class="col-6">
+                                barcode
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
